# genia-2026

./: .coverage  .gitignore  AGENTS.md  EXAMPLES.md  GENIA_REPL_README.md  GENIA_RULES.md  GENIA_STATE.md  README.md  docs_receive_evaluation.md  genia_repl.py  main.py  mkdocs.yml  pyproject.toml  pytest.ini  wc.genia
.claude/: settings.json
.github/: copilot-instructions.md
.github/agents/: implementer.agent.md  planner.agent.md  reviewer.agent.md
.github/instructions/: docs.instructions.md  stdlib.instructions.md  tests.instructions.md
.github/workflows/: ci.yml  docs.yml  validate-llm-instructions.yml
apps/playground/: README.md
docs/ai/: LLM_CONTRACT.md
docs/analysis/: absence-semantics-audit.md
docs/architecture/: core-ir-portability.md  execution-mode-lifecycle.md  issue-125-portability-audit.md  issue-140-pairs-audit.md  (+80 more)
examples/: AGENTS.md  ants.genia  ants_actor.genia  ants_terminal.genia  ants_web.genia  http_service.genia  r3_validated_pipeline_native_tests.genia  rest_feature_flags.genia  rest_metrics_service.genia  rest_services.md  rest_shortener_service.genia  rest_todo_service.genia  rest_webhook_service.genia  sum-5th.genia  tic-tac-toe.genia  validated_pipeline_demo.genia  zip_json_puzzle.genia  zip_json_puzzle.md
hosts/: README.md
scripts/: check-genia-branch.sh  cleanup-arch-docs.sh  genia-clean.sh  genia-new.sh
spec/: README.md  manifest.json
tests/: cheatsheet_validation.py  conftest.py  docs_truth_utils.py  test_absence_migration.py  test_actors.py  test_agents.py  test_annotation_metadata.py  test_ants_demo.py  test_ants_terminal_demo.py  test_ants_web_demo.py  test_apply_raw.py  test_autoload.py  test_basic.py  test_book_chapter_status_sections.py  test_callable_data.py  test_cases.py  test_cheatsheet_core.py  test_cheatsheet_unix_to_genia.py  test_cli_args.py  test_cli_pipe_mode.py  test_cli_shared_spec_runner.py  test_cli_stdlib.py  test_concurrency_examples.py  test_conformance_hardening.py  test_core.py  test_debug_stdio.py  test_doc_style_sync.py  test_docs_truth_model.py  test_errors.py  test_example_classification.py  test_examples.py  test_flow_phase1.py  test_flow_shared_spec_runner.py  test_flow_unix_scenarios.py  test_fn_stdlib.py  test_function_docstrings.py  test_function_resolution_precedence.py  test_glob_patterns.py  test_host_boundary_labels.py  test_host_template_structure.py  (+49 more)
tools/: lint_doc.py  stage_docs_for_mkdocs.py  validate_llm_instructions.py
(+1067 files in other folders)
