[project]
name = "genia"
version = "0.1.4"
description = "Genia language prototype interpreter and regression tests"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genia"]
include = [
  "/src/genia/std/**/*.genia",
]

[tool.hatch.build.targets.sdist]
include = [
  "/src/genia/**/*.py",
  "/src/genia/std/**/*.genia",
  "/tests/**/*.py",
  "/README.md",
  "/GENIA_STATE.md",
  "/GENIA_RULES.md",
  "/GENIA_REPL_README.md",
  "/docs/book/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[project.scripts]
genia = "genia.interpreter:_main"
